infra/database/cnpg-zalando/postgres-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: khoj-db-external
  namespace: cnpg-zalando
  annotations:
    io.cilium/lb-ipam-ips: "192.168.10.43"
spec:
  type: LoadBalancer
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    application: khoj-db
    cluster-name: khoj-db
