infra/database/cnpg-zalando/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-external
  namespace: cnpg-zalando
  annotations:
    io.cilium/lb-ipam-ips: "192.168.10.43"
spec:
  selector:
    application: spilo
    spilo-role: master
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: LoadBalancer
