infra/database/cnpg-zalando/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-operator-ui-service
  namespace: cnpg-zalando
  labels:
    app: postgres-operator-ui
spec:
  selector:
    app: postgres-operator-ui
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
