infra/database/cnpg-zalando/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zalando-postgres-ui
  namespace: cnpg-zalando
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "zalando.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zalando-postgres-operator-ui-service
          port: 8081
